--- a/d/Steps_and_Denoise_Calculator.html
+++ b/d/Steps_and_Denoise_Calculator.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic Step Calculator</title>
     <style>
+    body {
+        margin: 0;
+    }
     div#main_container {
         margin: 0 auto;
-        border: 1px solid rebeccapurple;
+/*        border: 1px solid rebeccapurple;*/
         width: calc(396px + 42px);
         height: calc(319px + 42px);
         display: flex;
